--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "so-rollup-plugins-utils",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "Simple Organization",
   "scripts": {
     "build": "tsc && rollup -c",
     "dev": "rollup -c -w",
     "prepack": "npm run build"
   },
+  "dependencies": {
+    "acorn-jsx": "^5.3.2",
+    "magic-string": "^0.30.2",
+    "estree-walker": "^3.0.3"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
-    "acorn-jsx": "^5.3.2",
     "esbuild": "0.19.2",
-    "estree-walker": "^3.0.3",
-    "magic-string": "^0.30.2",
     "prettier": "3.0.2",
     "rollup": "^3.28.0",
     "rollup-plugin-dts": "^5.3.1",
