--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "build": "tsc && rollup -c",
     "dev": "rollup -c -w",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "test": "playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
     "acorn-jsx": "^5.3.2",
-    "magic-string": "^0.30.2",
-    "estree-walker": "^3.0.3"
+    "estree-walker": "^3.0.3",
+    "magic-string": "^0.30.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.37.1",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "acorn": "^8.10.0",
     "esbuild": "0.19.2",
     "prettier": "3.0.2",
     "rollup": "^3.28.0",
